--- a/hotelinventory/src/app/app.component.html
+++ b/hotelinventory/src/app/app.component.html
@@ -1,12 +1,4 @@
 <h1>Hello world</h1>
 
-<h2>this will be the first project in angular</h2>
 
-<p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit saepe aliquid
-  consequatur voluptatibus nobis, possimus odio officiis veritatis. Quaerat
-  animi illum incidunt dignissimos sunt illo, id tenetur totam eius vero?
-</p>
-
-<input type="text" placeholder="type your name">
-<label for="name"></label>
+<app-rooms></app-rooms>
