--- a/hotelinventory/src/app/rooms/rooms.component.html
+++ b/hotelinventory/src/app/rooms/rooms.component.html
@@ -13,7 +13,23 @@
 
     Rooms List: 
     <!-- {{roomList}} -->
+<table>
+    <tr>
+        <th>Room Number</th>
+        <th>Room Type</th>
+        <th>Room Price</th>
+        <th>Room Amenities</th>
+        <th>Checkin Time</th>
+    </tr>
+    <tr *ngFor="let room of roomList">
 
+        <td>{{room.roomNumber}}</td>
+        <td>{{room.roomType}}</td>
+        <td>{{room.price}}</td>
+        <td>{{room.amenities}}</td>
+        <td>{{room.checkinTime}}</td>
+    </tr>
+</table>
 </div>
 <!-- event binding -->
 
