--- a/hotelinventory/src/app/rooms/rooms.component.html
+++ b/hotelinventory/src/app/rooms/rooms.component.html
@@ -1,42 +1,47 @@
-<h1>Welcome to {{hotelName}}</h1>
+<h1>Welcome to {{ hotelName }}</h1>
 
 <div [hidden]="hideRooms">
-
-    Number of rooms
-    <div [innerText]="numberOfRooms"></div> 
+  Number of rooms
+  <div
+    [ngStyle]="{ color: rooms.availableRooms ? 'green' : 'red' }"
+    [innerText]="numberOfRooms"
+  ></div>
 </div>
 
-<!-- {{rooms?.availableRooms ?? 'No rooms'}} -->
+<!-- {{ rooms?.availableRooms ?? "No rooms" }} -->
+
+<!-- {{roomList | json}} -->
 
 <!-- use case of "NgIf"-->
 <div *ngIf="rooms.availableRooms > 0">
-
-    Rooms List: 
-    <!-- {{roomList}} -->
-<table>
+  Rooms List:
+  <!-- {{roomList}} -->
+  <table>
     <tr>
-        <th>index</th>
-        <th>Even/Odd</th>
-        <th>Room Number</th>
-        <th>Room Type</th>
-        <th>Room Price</th>
-        <th>Room Amenities</th>
-        <th>Checkin Time</th>
+      <th>index</th>
+      <th>Even/Odd</th>
+      <th>Room Number</th>
+      <th>Room Type</th>
+      <th>Room Price</th>
+      <th>Room Amenities</th>
+      <th>Checkin Time</th>
     </tr>
-    <tr *ngFor="let room of roomList; let e=even; let o=odd; let i=index">
-<td>{{i}} </td>
-        <td>{{e? "Even": "Odd"}}</td>
-        <td>{{room.roomNumber}}</td>
-        <td>{{room.roomType}}</td>
-        <td>{{room.price}}</td>
-        <td>{{room.amenities}}</td>
-        <td>{{room.checkinTime}}</td>
+    <tr
+      [ngClass]="e ? 'even' : 'odd'"
+      *ngFor="let room of roomList; let e = even; let o = odd; let i = index"
+    >
+      <td>{{ i | percent}}</td>
+      <td>{{ e ? "Even" : "Odd" }}</td>
+      <td>{{ room.roomNumber }}</td>
+      <td>{{ room.roomType }}</td>
+      <td>{{ room.price | currency : 'EUR' }}</td>
+      <td>{{ room.amenities | uppercase}}</td>
+      <td>{{ room.checkinTime | date : "dd/MM/yyyy" }}</td>
     </tr>
-</table>
+  </table>
 </div>
 <!-- event binding -->
 
 <button (click)="toggle()">Toggle</button>
 
 <!-- "Control + T to search for any file" -->
-
