--- a/hotelinventory/src/app/rooms/rooms.component.html
+++ b/hotelinventory/src/app/rooms/rooms.component.html
@@ -28,7 +28,7 @@
     </tr>
     <tr
       [ngClass]="e ? 'even' : 'odd'"
-      *ngFor="let room of roomList; let e = even; let o = odd; let i = index"
+      *ngFor="let room of roomList | slice : 0:3; let e = even; let o = odd; let i = index"
     >
       <td>{{ i | percent}}</td>
       <td>{{ e ? "Even" : "Odd" }}</td>
@@ -37,6 +37,7 @@
       <td>{{ room.price | currency : 'EUR' }}</td>
       <td>{{ room.amenities | uppercase}}</td>
       <td>{{ room.checkinTime | date : "dd/MM/yyyy" }}</td>
+ <td> {{ room.rating | number : "1.1-1" : 'en-us' }} </td>
     </tr>
   </table>
 </div>
