--- a/hotelinventory/src/app/rooms/rooms.component.html
+++ b/hotelinventory/src/app/rooms/rooms.component.html
@@ -14,32 +14,7 @@
 
 <!-- use case of "NgIf"-->
 <div *ngIf="rooms.availableRooms > 0">
-  Rooms List:
-  <!-- {{roomList}} -->
-  <table>
-    <tr>
-      <th>index</th>
-      <th>Even/Odd</th>
-      <th>Room Number</th>
-      <th>Room Type</th>
-      <th>Room Price</th>
-      <th>Room Amenities</th>
-      <th>Checkin Time</th>
-    </tr>
-    <tr
-      [ngClass]="e ? 'even' : 'odd'"
-      *ngFor="let room of roomList | slice : 0:3; let e = even; let o = odd; let i = index"
-    >
-      <td>{{ i | percent}}</td>
-      <td>{{ e ? "Even" : "Odd" }}</td>
-      <td>{{ room.roomNumber }}</td>
-      <td>{{ room.roomType }}</td>
-      <td>{{ room.price | currency : 'EUR' }}</td>
-      <td>{{ room.amenities | uppercase}}</td>
-      <td>{{ room.checkinTime | date : "dd/MM/yyyy" }}</td>
- <td> {{ room.rating | number : "1.1-1" : 'en-us' }} </td>
-    </tr>
-  </table>
+ <app-rooms-list [rooms] ="roomList"></app-rooms-list>
 </div>
 <!-- event binding -->
 
