--- a/hotelinventory/src/app/rooms/rooms.component.html
+++ b/hotelinventory/src/app/rooms/rooms.component.html
@@ -12,9 +12,14 @@
 
 <!-- {{roomList | json}} -->
 
+<div *ngIf="selectedRoom">
+{{selectedRoom | json}}
+</div>
+
 <!-- use case of "NgIf"-->
 <div *ngIf="rooms.availableRooms > 0">
- <app-rooms-list [rooms] ="roomList"></app-rooms-list>
+ <app-rooms-list [rooms] ="roomList"
+ (selectedRoom)="selectRoom($event)"></app-rooms-list>
 </div>
 <!-- event binding -->
 
