--- a/hotelinventory/src/app/rooms/rooms.component.html
+++ b/hotelinventory/src/app/rooms/rooms.component.html
@@ -16,6 +16,10 @@
 {{selectedRoom | json}}
 </div>
 
+<div>
+  <button (click)="addRoom()">Add Room</button>
+</div>
+
 <!-- use case of "NgIf"-->
 <div *ngIf="rooms.availableRooms > 0">
  <app-rooms-list [rooms] ="roomList"
